Fix bug with IE 11 not truncating ListItem

--- a/src/components/ListItem.scss
+++ b/src/components/ListItem.scss
@@ -71,7 +71,7 @@
         }
 
         & > .label {
-            flex: 1 1 auto;
+            flex: 1;
             min-width: 0; /* needed for force flex to collapse this if content is wider than the current space */
             padding-top: 16px;
             padding-bottom: 16px;
